--- a/index.css
+++ b/index.css
@@ -238,7 +238,7 @@ section {
 }
 
 .firstPageContent .box1 .box1Content p {
-  font-family: cursive;
+  font-family: 'Oxygen', sans-serif;
   line-height: normal !important;
   font-size: 15px;
   font-weight: 200;
@@ -389,7 +389,7 @@ section {
   text-transform: capitalize;
   border-bottom: 1.7px solid #000000;
   padding: 0px 100px;
-  font-family: cursive;
+  font-family: 'Manrope', sans-serif;
   color: #000;
   width: 100%;
 }
@@ -481,7 +481,7 @@ section {
   text-transform: capitalize;
   border-bottom: 1.7px solid #000000;
   padding: 0px 100px;
-  font-family: cursive;
+  font-family: 'Oxygen', sans-serif;
   color: #000;
 }
 
@@ -533,8 +533,7 @@ section {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #f0fff0;
-  accent-color: #ff1493;
+
   margin: 40px;
   padding: 10px;
   border-radius: 25px;
@@ -903,7 +902,7 @@ textarea {
   flex-direction: column;
   gap: 10px;
   font-weight: 200;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Oxygen', sans-serif;
 }
 
 .footerSectionContent .media {
@@ -929,7 +928,7 @@ textarea {
 
 .contentMidlle .socials .media p {
   text-transform: capitalize;
-  font-family: cursive;
+  font-family: 'Oxygen', sans-serif;
 }
 
 .contentRight li {
@@ -992,7 +991,6 @@ a {
   body {
     max-width: 100%;
     overflow: scroll;
-    width: 100vh;
   }
 
   .mainNav nav .nav .menu ul a li {
@@ -1020,8 +1018,30 @@ a {
     margin: 0;
   }
 }
+@media only screen and (max-width: 915px) {
+    .reservationSectionContent1 .box1 h1 {
+    font-size: 25px;
+  }
 
-@media only screen and (max-width: 801px) {
+  .reservationSectionContent1 .box1 h3 {
+    font-size: 15px;
+  }
+
+  .reservationSectionContent1 .box2 form {
+    width: 500px;
+  }
+
+  .reviewCard .ClientImgName .Clientimg img {
+    width: 80px;
+  }
+
+  .reviewCard {
+    width: 400px;
+  }
+
+}
+
+@media only screen and (max-width: 820px) {
   .quickSignUp {
     display: none;
   }
@@ -1121,7 +1141,8 @@ a {
     font-size: 22px;
   }
   .firstPageContent .box2 .box2Content .caption {
-    display: none;
+    width: 200px;
+    transition: 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
   }
 
   .secondSection .secondSectionContent .h1 h1 {
@@ -1150,12 +1171,21 @@ a {
   .GalleryCaption {
     font-size: 12px;
   }
+  .Gallery .GallerySubmit{
+    font-size: 7px;
+  }
+  .too-big{
+    width: 150px;
+    height: 100px;
+  }
   .DrinksGallery .Gallery {
     height: 270px;
   }
+
   .reservationSection .reservationSectionContent .reservationSectionContent1 {
     display: flex;
     flex-wrap: wrap;
+    gap: 15px;
   }
   .reservationSection
     .reservationSectionContent
@@ -1196,5 +1226,9 @@ a {
 .ourChefsContent .chefs{
   flex-wrap: wrap;
 }
+ .copyWright span{
+  font-size: 12px;
+}
 
 }
+
