--- a/index.css
+++ b/index.css
@@ -19,6 +19,11 @@ html {
   width: 100%;
   background-color: #ffffff;
   accent-color: #ad4533;
+  position: fixed;
+  box-shadow: 4px 6px 40px -13px rgba(22, 91, 199, 0.81);
+  -webkit-box-shadow: 4px 6px 40px -13px rgba(22, 91, 199, 0.81);
+  -moz-box-shadow: 4px 6px 40px -13px rgba(22, 91, 199, 0.81);
+  margin-bottom: 60px;
 }
 
 .mainNav nav .nav {
@@ -125,8 +130,8 @@ html {
   justify-content: center;
   align-items: center;
 }
-
-.quickSignUpMain {
+/* temporarily removed */
+/* .quickSignUpMain {
   position: sticky;
   top: 0;
   z-index: 1;
@@ -196,7 +201,7 @@ html {
   font-size: 16px;
   font-family: cursive;
   text-transform: capitalize;
-}
+} */
 
 section {
   overflow: hidden;
@@ -238,9 +243,10 @@ section {
 }
 
 .firstPageContent .box1 .box1Content p {
-  font-family: 'Oxygen', sans-serif;
+  font-family: "Manrope", sans-serif;
+  word-spacing: 5px;
   line-height: normal !important;
-  font-size: 15px;
+  font-size: 18px;
   font-weight: 200;
   color: #4b0082;
 }
@@ -389,7 +395,7 @@ section {
   text-transform: capitalize;
   border-bottom: 1.7px solid #000000;
   padding: 0px 100px;
-  font-family: 'Manrope', sans-serif;
+  font-family: "Manrope", sans-serif;
   color: #000;
   width: 100%;
 }
@@ -481,13 +487,13 @@ section {
   text-transform: capitalize;
   border-bottom: 1.7px solid #000000;
   padding: 0px 100px;
-  font-family: 'Oxygen', sans-serif;
+  font-family: "Oxygen", sans-serif;
   color: #000;
 }
 
 .describeOrder h5 {
   text-transform: capitalize;
-  font-family: cursive;
+  font-family: "Roboto Slab", serif;
   font-size: 20px;
 }
 
@@ -504,7 +510,7 @@ section {
 .reservationSectionContent {
   color: #fff !important;
   text-transform: capitalize !important;
-  font-family: cursive !important;
+  font-family: "Roboto Slab", serif !important;
 }
 
 .reservationSectionContent .h1 {
@@ -524,7 +530,7 @@ section {
   border-bottom: 3px solid #00e1ff;
   text-transform: capitalize;
   color: #00e1ff;
-  font-family: cursive;
+  font-family: "Roboto Slab", serif;
   text-align: center;
   width: 100%;
 }
@@ -598,7 +604,7 @@ article {
   text-transform: capitalize;
   font-size: 15px;
   font-weight: 300;
-  font-family: cursive;
+  font-family: "Roboto Slab", serif;
 }
 
 .reservationSectionContent1 .box2 form input,
@@ -639,7 +645,7 @@ option {
 
 .reviewsFromClients {
   display: flex;
-  border-radius: 10px ;
+  border-radius: 10px;
 }
 
 .ratingsheading h1 {
@@ -902,7 +908,7 @@ textarea {
   flex-direction: column;
   gap: 10px;
   font-weight: 200;
-  font-family: 'Oxygen', sans-serif;
+  font-family: "Oxygen", sans-serif;
 }
 
 .footerSectionContent .media {
@@ -928,7 +934,7 @@ textarea {
 
 .contentMidlle .socials .media p {
   text-transform: capitalize;
-  font-family: 'Oxygen', sans-serif;
+  font-family: "Oxygen", sans-serif;
 }
 
 .contentRight li {
@@ -958,16 +964,21 @@ a {
   position: fixed;
   top: 0;
   display: none;
-  justify-content: center;
-  align-items: center;
+  right: 0;
   z-index: 1000;
   width: 70%;
-  background-color: #383838;
+  background-color: #3838388f;
   transition: 1s cubic-bezier(0.165, 0.84, 0.44, 1);
   height: 100%;
   color: white;
   flex-direction: column;
-  backdrop-filter: blur(5px) brightness(80%);
+  backdrop-filter: blur;
+}
+.inside {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30%;
 }
 
 .menu-comeout ul {
@@ -975,12 +986,15 @@ a {
   padding: 0;
 }
 
-.menu-comeout ul li {
-  margin: 10%;
+.inside li {
+  margin: 30px;
   font-family: serif;
   font-size: 25px;
-  padding: 20px 40px;
+  padding: 20px;
   cursor: pointer;
+}
+.menu-li-a {
+  color: black;
 }
 
 .menu-comeout ul li:hover {
@@ -1019,7 +1033,7 @@ a {
   }
 }
 @media only screen and (max-width: 915px) {
-    .reservationSectionContent1 .box1 h1 {
+  .reservationSectionContent1 .box1 h1 {
     font-size: 25px;
   }
 
@@ -1038,7 +1052,6 @@ a {
   .reviewCard {
     width: 400px;
   }
-
 }
 
 @media only screen and (max-width: 820px) {
@@ -1126,7 +1139,7 @@ a {
   }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 701px) {
   .firstPageContent {
     display: flex;
     flex-wrap: wrap;
@@ -1171,10 +1184,10 @@ a {
   .GalleryCaption {
     font-size: 12px;
   }
-  .Gallery .GallerySubmit{
+  .Gallery .GallerySubmit {
     font-size: 7px;
   }
-  .too-big{
+  .too-big {
     width: 150px;
     height: 100px;
   }
@@ -1203,32 +1216,28 @@ a {
     font-size: 20px;
   }
 
-  .reviewsFromClients .part1 ,.reviewCard{
+  .reviewsFromClients .part1,
+  .reviewCard {
     width: 90%;
   }
-  
-  
 
   .reviewsFromClients .part1 {
     flex-direction: column;
   }
-.chooseDiningKings .whyDiningKings .reasonsDiningKings {
-  flex-wrap: wrap;
-  justify-content: center;
-
+  .chooseDiningKings .whyDiningKings .reasonsDiningKings {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .chooseDiningKings .whyDiningKings .reasonsDiningKings .reasons {
+    width: 90%;
+  }
+  .ourChefsContent h1 {
+    font-size: 50px;
+  }
+  .ourChefsContent .chefs {
+    flex-wrap: wrap;
+  }
+  .copyWright span {
+    font-size: 12px;
+  }
 }
-.chooseDiningKings .whyDiningKings .reasonsDiningKings .reasons{
-  width:90%;
-}
-.ourChefsContent h1{
-  font-size: 50px;
-}
-.ourChefsContent .chefs{
-  flex-wrap: wrap;
-}
- .copyWright span{
-  font-size: 12px;
-}
-
-}
-
